[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Player/Gameplay/MechShield.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Effects/Shield.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 17.0

[node name="Shield" type="Node2D"]
script = ExtResource( 1 )

[node name="Shield_collider" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Collider" type="CollisionShape2D" parent="Shield_collider"]
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
z_index = 3
texture = ExtResource( 2 )

[node name="Shield_time" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Shield_cooldown" type="Timer" parent="."]
wait_time = 2.25
one_shot = true

[node name="Tween" type="Tween" parent="."]
